--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3225,7 +3225,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "02ae4c48",
+   "id": "65d11a1e",
    "metadata": {},
    "outputs": [
     {
@@ -3262,7 +3262,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c08c2ddf",
+   "id": "c1652157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3275,7 +3275,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "edd5a3f5",
+   "id": "245b4df3",
    "metadata": {},
    "outputs": [
     {
@@ -3311,7 +3311,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "64bfb252",
+   "id": "bcf07745",
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3347,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "03bd0b0a",
+   "id": "a25f1427",
    "metadata": {},
    "outputs": [
     {
@@ -3496,7 +3496,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "81dcc281",
+   "id": "5db9fbef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "96c82b71",
+   "id": "1274edf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "27f9ae47",
+   "id": "41673428",
    "metadata": {},
    "outputs": [
     {
@@ -3554,7 +3554,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "fa09fcfd",
+   "id": "d3c6b7d6",
    "metadata": {},
    "outputs": [
     {
@@ -3708,7 +3708,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ceb660c4",
+   "id": "ea634e37",
    "metadata": {},
    "outputs": [
     {
@@ -3857,7 +3857,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "73df71d2",
+   "id": "2b5f331b",
    "metadata": {},
    "outputs": [
     {
@@ -4005,7 +4005,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1bb0c958",
+   "id": "a551d794",
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a8198d62",
+   "id": "0cee8a78",
    "metadata": {},
    "outputs": [
     {
@@ -4295,7 +4295,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "d358fe7f",
+   "id": "caa8181d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4312,7 +4312,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ab094ec4",
+   "id": "bb6252d6",
    "metadata": {},
    "outputs": [
     {
@@ -4576,7 +4576,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a686f70d",
+   "id": "84e8ab39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4593,7 +4593,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "93d0271c",
+   "id": "d3e5d600",
    "metadata": {},
    "outputs": [
     {
@@ -4630,7 +4630,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3ff04897",
+   "id": "f7922036",
    "metadata": {},
    "outputs": [
     {
@@ -4667,7 +4667,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "cffa3a0e",
+   "id": "1bd8c766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4684,7 +4684,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "341bf8e3",
+   "id": "d82d02f3",
    "metadata": {},
    "outputs": [
     {
@@ -4721,7 +4721,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "57062330",
+   "id": "38d81a46",
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4827,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ecf4317b",
+   "id": "67367dcb",
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fe7ca7d6",
+   "id": "5bf00c4b",
    "metadata": {},
    "outputs": [
     {
@@ -5040,7 +5040,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9a29f062",
+   "id": "65be9276",
    "metadata": {},
    "outputs": [
     {
@@ -5147,7 +5147,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "77d2e106",
+   "id": "88470a10",
    "metadata": {},
    "outputs": [
     {
@@ -5177,7 +5177,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "baddb5f7",
+   "id": "76856677",
    "metadata": {},
    "outputs": [
     {
@@ -5207,7 +5207,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e7c4bfdb",
+   "id": "78b03eff",
    "metadata": {},
    "outputs": [
     {
@@ -5246,7 +5246,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "d34981d2",
+   "id": "52fac2a3",
    "metadata": {},
    "outputs": [
     {
@@ -5285,7 +5285,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "48c38820",
+   "id": "0499ceb6",
    "metadata": {},
    "outputs": [
     {
@@ -5312,7 +5312,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5abd9ce5",
+   "id": "9a270b06",
    "metadata": {},
    "outputs": [
     {
@@ -5339,7 +5339,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "e7f9796c",
+   "id": "464557ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5351,7 +5351,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "be34772f",
+   "id": "16ae77cd",
    "metadata": {},
    "outputs": [
     {
@@ -5689,7 +5689,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "b725551c",
+   "id": "7e2dc2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5708,7 +5708,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "71a9ab78",
+   "id": "85f94ebe",
    "metadata": {},
    "outputs": [
     {
@@ -5734,7 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "d439c2f5",
+   "id": "9704f627",
    "metadata": {},
    "outputs": [
     {
@@ -5853,7 +5853,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "6924a059",
+   "id": "0f042db4",
    "metadata": {},
    "outputs": [
     {
@@ -5975,7 +5975,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "f2233eb1",
+   "id": "0d707ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5987,7 +5987,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "cd49d6c7",
+   "id": "9bd5eb92",
    "metadata": {},
    "outputs": [
     {
@@ -6151,7 +6151,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "51f720aa",
+   "id": "4b5b05bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6170,7 +6170,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "06781b2f",
+   "id": "2e537ed1",
    "metadata": {},
    "outputs": [
     {
@@ -6272,7 +6272,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "93a1fa37",
+   "id": "e80d9096",
    "metadata": {},
    "outputs": [
     {
@@ -6376,8 +6376,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "9d32fc6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9617f671",
+   "id": "c845b373",
    "metadata": {},
    "outputs": [],
    "source": []
