--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3225,7 +3225,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "65d11a1e",
+   "id": "8eabbd94",
    "metadata": {},
    "outputs": [
     {
@@ -3262,7 +3262,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c1652157",
+   "id": "7ffbaebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3275,7 +3275,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "245b4df3",
+   "id": "ab4b0231",
    "metadata": {},
    "outputs": [
     {
@@ -3311,7 +3311,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "bcf07745",
+   "id": "e71c395e",
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3347,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a25f1427",
+   "id": "d3c3a0c1",
    "metadata": {},
    "outputs": [
     {
@@ -3496,7 +3496,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5db9fbef",
+   "id": "6fb33707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1274edf9",
+   "id": "67590f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "41673428",
+   "id": "76c722bb",
    "metadata": {},
    "outputs": [
     {
@@ -3554,7 +3554,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d3c6b7d6",
+   "id": "6c56cf00",
    "metadata": {},
    "outputs": [
     {
@@ -3708,7 +3708,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ea634e37",
+   "id": "88c94240",
    "metadata": {},
    "outputs": [
     {
@@ -3857,7 +3857,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2b5f331b",
+   "id": "9a8329c9",
    "metadata": {},
    "outputs": [
     {
@@ -4005,7 +4005,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a551d794",
+   "id": "70e94961",
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "0cee8a78",
+   "id": "f18effd6",
    "metadata": {},
    "outputs": [
     {
@@ -4295,7 +4295,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "caa8181d",
+   "id": "009c5b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4312,7 +4312,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "bb6252d6",
+   "id": "458b8c81",
    "metadata": {},
    "outputs": [
     {
@@ -4576,7 +4576,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "84e8ab39",
+   "id": "da292bc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4593,7 +4593,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d3e5d600",
+   "id": "890d94b8",
    "metadata": {},
    "outputs": [
     {
@@ -4630,7 +4630,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f7922036",
+   "id": "1331785e",
    "metadata": {},
    "outputs": [
     {
@@ -4667,7 +4667,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "1bd8c766",
+   "id": "58c4f7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4684,7 +4684,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d82d02f3",
+   "id": "c32c3e5b",
    "metadata": {},
    "outputs": [
     {
@@ -4721,7 +4721,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "38d81a46",
+   "id": "06f93636",
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4827,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "67367dcb",
+   "id": "c6346076",
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5bf00c4b",
+   "id": "03c57ca8",
    "metadata": {},
    "outputs": [
     {
@@ -5040,7 +5040,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "65be9276",
+   "id": "f6586fb0",
    "metadata": {},
    "outputs": [
     {
@@ -5147,7 +5147,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "88470a10",
+   "id": "7d9f4ce7",
    "metadata": {},
    "outputs": [
     {
@@ -5177,7 +5177,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "76856677",
+   "id": "06f271f6",
    "metadata": {},
    "outputs": [
     {
@@ -5207,7 +5207,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "78b03eff",
+   "id": "e7841f9c",
    "metadata": {},
    "outputs": [
     {
@@ -5246,7 +5246,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "52fac2a3",
+   "id": "0ca44851",
    "metadata": {},
    "outputs": [
     {
@@ -5285,7 +5285,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "0499ceb6",
+   "id": "a677fe56",
    "metadata": {},
    "outputs": [
     {
@@ -5312,7 +5312,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "9a270b06",
+   "id": "14274c7a",
    "metadata": {},
    "outputs": [
     {
@@ -5339,7 +5339,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "464557ef",
+   "id": "0afa3a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5351,7 +5351,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "16ae77cd",
+   "id": "abed9065",
    "metadata": {},
    "outputs": [
     {
@@ -5689,7 +5689,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "7e2dc2bb",
+   "id": "18919c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5708,7 +5708,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "85f94ebe",
+   "id": "a9d31a4b",
    "metadata": {},
    "outputs": [
     {
@@ -5734,7 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9704f627",
+   "id": "45f3eef5",
    "metadata": {},
    "outputs": [
     {
@@ -5853,7 +5853,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "0f042db4",
+   "id": "8df26ad2",
    "metadata": {},
    "outputs": [
     {
@@ -5975,7 +5975,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "0d707ba5",
+   "id": "2c34a8d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5987,7 +5987,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9bd5eb92",
+   "id": "2ee0aa52",
    "metadata": {},
    "outputs": [
     {
@@ -6151,7 +6151,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "4b5b05bb",
+   "id": "b1a0ac90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6170,7 +6170,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2e537ed1",
+   "id": "1b868492",
    "metadata": {},
    "outputs": [
     {
@@ -6272,7 +6272,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "e80d9096",
+   "id": "d11f1942",
    "metadata": {},
    "outputs": [
     {
@@ -6377,7 +6377,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "9d32fc6e",
+   "id": "554ecbf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6395,8 +6395,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "77b2ebce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "d7fe5615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c845b373",
+   "id": "e4fcbecd",
    "metadata": {},
    "outputs": [],
    "source": []
